--- a/index.html
+++ b/index.html
@@ -6,17 +6,8 @@
   <title>Jerin K Jose - Portfolio</title>
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
-  <!-- Custom Styles (Optional) -->
-  <style>
-    /* Custom styling for hover animations */
-    .project-card:hover {
-      transform: translateY(-5px);
-      transition: transform 0.3s;
-    }
-    html {
-        scroll-behavior: smooth;
-      }
-  </style>
+  <link rel="stylesheet" href="styles.css">
+
 </head>
 <body class="bg-gray-100 font-sans leading-normal tracking-normal">
   <!-- Navigation -->
@@ -167,7 +158,30 @@
       <div class="bg-gray-100 p-4 rounded-lg shadow-lg hover:bg-indigo-100 transition duration-300">
         <h3 class="text-xl font-semibold text-gray-800">Teamwork</h3>
       </div>
+      <div class="bg-gray-100 p-4 rounded-lg shadow-lg hover:bg-indigo-100 transition duration-300">
+        <h3 class="text-xl font-semibold text-gray-800">Quick Learner</h3>
+      </div>
+      <div class="bg-gray-100 p-4 rounded-lg shadow-lg hover:bg-indigo-100 transition duration-300">
+        <h3 class="text-xl font-semibold text-gray-800">Lab Equipment Proficiency</h3>
+      </div>
+      <div class="bg-gray-100 p-4 rounded-lg shadow-lg hover:bg-indigo-100 transition duration-300">
+        <h3 class="text-xl font-semibold text-gray-800">Technical Equipment Handling</h3>
+      </div>
     </div>
+  </div>
+</section>
+
+
+<section id="experience" class="py-12 bg-white">
+  <div class="container mx-auto px-6">
+    <ul class="list-disc list-inside space-y-4 text-gray-700">
+      <li>Skilled in operating and maintaining laboratory equipment including oscilloscopes, signal generators, etc.</li>
+      <li>Experienced in the setup of technical equipment to ensure accurate measurements and data integrity.</li>
+      <li>Proficient in diagnosing, troubleshooting, and repairing electronic and measurement devices to maintain operational efficiency.</li>
+      <li>Hands-on experience in handling soldering stations, PCB design tools, and other electronics lab equipment.</li>
+      <li>Competent in assembling, testing, and verifying functionality of hardware prototypes using precision measurement tools.</li>
+      <li>Responsible for equipment safety and proper usage, ensuring compliance with lab safety standards.</li>
+    </ul>
   </div>
 </section>
 
@@ -215,8 +229,64 @@
     </div>
   </section>
 
+  <hr class="my-8 border-t-2 border-gray-300">
+
+<!-- Other Works Section -->
+<section id="other_works" class="py-20 bg-gray-100">
+  <div class="container mx-auto px-6 md:px-12">
+    <h2 class="text-3xl font-bold text-center mb-12">Other Works</h2>
+    <div class="flex flex-wrap -mx-4">
+      <!-- Work 1 -->
+      <div class="w-full md:w-1/3 px-4 mb-8">
+        <div class="bg-white rounded-lg shadow-lg overflow-hidden project-card">
+          <img src="assets/Other Works/Work 2/img.jpg" alt="Project 1" class="w-full h-48 object-cover">
+          <div class="p-6">
+            <h3 class="text-l font-semibold mb-2">200W Active speaker repair</h3>
+            <button id="viewWork1GalleryBtn" class="bg-blue-500 text-white px-6 py-3 rounded-lg hover:bg-blue-600 mb-4">View Gallery</button>
+
+          </div>
+        </div>
+      </div>
+      <!-- Modal -->
+      <div id="work1GalleryModal" class="modal">
+        <div class="modal-content">
+          <span class="close">&times;</span>
+    
+          <!-- Video -->
+          <div class="mt-8">
+            <iframe class="w-full h-64 md:h-96 rounded shadow-lg" src="https://www.youtube.com/embed/0SSG71Sy4cg" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
 
 
+      <!-- Work 2 -->
+      <div class="w-full md:w-1/3 px-4 mb-8">
+        <div class="bg-white rounded-lg shadow-lg overflow-hidden project-card">
+          <img src="assets/Other Works/Work 1/img2.jpg" alt="work 2" class="w-full h-48 object-cover">
+          <div class="p-6">
+            <h3 class="text-xl font-semibold mb-2">Microphone audio box using Multicore Cable</h3>
+            <button id="viewWork2GalleryBtn" class="bg-blue-500 text-white px-6 py-3 rounded-lg hover:bg-blue-600 mb-4">View Gallery</button>
+
+          </div>
+        </div>
+      </div>
+      <!-- Modal -->
+      <div id="work2GalleryModal" class="modal">
+        <div class="modal-content">
+          <span class="close">&times;</span>
+          <div class="gallery-images">
+            <!-- Images and Videos in Gallery -->
+            <img src="assets/Other Works/Work 1/img1.jpg" alt="Image 1" />
+            <img src="assets/Other Works/Work 1/img2.jpg" alt="Image 2" />
+            <img src="assets/Other Works/Work 1/img3.jpg" alt="Image 3" />
+          </div>
+        </div>
+      </div>
+    
+    </div>
+  </div>
+</section>
 
   <!-- Contact Section -->
   <!-- <section id="contact" class="py-20 bg-white">
@@ -252,6 +322,9 @@
     </div>
   </footer>
 
+
+
+  <script src="index.js"></script>
 </body>
 </html>
 
