--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           Hi, I'm <span class="text-blue-400">Jerin K Jose</span>
         </h1>
         <p class="text-lg md:text-xl mb-6">
-          Electronics & Communication Engineer | Embedded Systems Enthusiast | IoT Developer
+          Electronics & Communication Engineer
         </p>
         <div class="mt-6 mb-12 flex gap-4 items-center">
           <div class="flex space-x-3">
@@ -54,6 +54,9 @@
         </div>
         <a href="#projects" class="bg-blue-500 hover:bg-blue-400 text-white font-semibold py-3 px-6 rounded-lg shadow-lg transition duration-300">
           View My Projects
+        </a>
+        <a href="https://drive.google.com/file/d/1vQTiwbthl8OxebP0wsiuh4s30vaahUS0/view?usp=sharing" class="ml-5 bg-blue-500 hover:bg-blue-400 text-white font-semibold py-3 px-6 rounded-lg shadow-lg transition duration-300">
+          Download Resume
         </a>
       </div>
 
