--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           Hi, I'm <span class="text-blue-400">Jerin K Jose</span>
         </h1>
         <p class="text-lg md:text-xl mb-6">
-          Electronics & Communication Engineer
+          Electronics & Communication Engineer | Tech Enthusiast 
         </p>
         <div class="mt-6 mb-12 flex gap-4 items-center">
           <div class="flex space-x-3">
