--- a/index.html
+++ b/index.html
@@ -228,6 +228,17 @@
             </div>
           </div>
         </div>
+        <!-- Project 4 -->
+        <div class="w-full md:w-1/3 px-4 mb-8">
+          <div class="bg-white rounded-lg shadow-lg overflow-hidden project-card">
+            <img src="assets\projects\Project 4\Schematic.png" alt="Project 3" class="w-full h-48 object-cover">
+            <div class="p-6">
+              <h3 class="text-xl font-semibold mb-2">PCB Design using ATMega328P Microcontroller</h3>
+              <p class="text-gray-700 mb-4">Created Schematic and Layout for ATMega328P Microcontroller based Circiut</p>
+              <a href="project4.html" class="text-blue-600 hover:underline">Learn More</a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
